[gd_scene load_steps=9 format=3 uid="uid://b0lmqflsf2uv7"]

[ext_resource type="Script" path="res://npc/wanita_misterius.gd" id="1_idyis"]
[ext_resource type="Texture2D" uid="uid://d33lrtwtxpb1m" path="res://asset/wanita_misterius.png" id="2_fjvd3"]
[ext_resource type="Texture2D" uid="uid://c476ak5mj5oy5" path="res://asset/interact-text.png" id="3_g18rc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yhw8t"]
atlas = ExtResource("2_fjvd3")
region = Rect2(0, 0, 117, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfv2r"]
atlas = ExtResource("2_fjvd3")
region = Rect2(117, 0, 117, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_puebc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhw8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfv2r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkvwm"]
size = Vector2(74, 121)

[sub_resource type="CircleShape2D" id="CircleShape2D_saam2"]
radius = 126.004

[node name="WanitaMisterius" type="CharacterBody2D"]
script = ExtResource("1_idyis")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_puebc")
animation = &"idle"
frame_progress = 0.848104

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 5.5)
shape = SubResource("RectangleShape2D_jkvwm")

[node name="chatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chatDetection"]
shape = SubResource("CircleShape2D_saam2")

[node name="Label" type="NinePatchRect" parent="chatDetection"]
offset_left = -59.0
offset_top = -88.0
offset_right = 59.0
offset_bottom = -48.0
texture = ExtResource("3_g18rc")
region_rect = Rect2(0, 0, 400, 100)

[connection signal="body_entered" from="chatDetection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chatDetection" to="." method="_on_chat_detection_body_exited"]
